@@ -8,6 +8,7 @@ Version 0.6
 - removed pending deprecations
 - sys.path is now printed from the testapp.
 - fixed an RFC 2068 incompatibility with cookie value quoting.
+- the :class:`FileStorage` how gives access to the multipart headers.
 
 Version 0.5.1
 -------------
